Add data remanence, update IT tests, format code